  the last version.


filesysbox.library 53.6 (26.12.2015)

- FbxSameLock() now returns DOSTRUE if entry pointers are the same.

- Removed the now useless path comparison in FbxSameLock().


filesysbox.library 53.7 (26.4.2018)

- Got rid of all the GetXxxBase macros.

- Fixed an out of bounds array access in FbxUpdatePaths() which would result
  in memory after the FbxFS struct being trashed.


filesysbox.library 54.0 (22.12.2022)

- Added timezone conversion code using locale.library.

- Calculate a path hash for fib_DiskKey unless FBXF_USE_INO flag is set.

- Added FBXF_USE_FILL_DIR_STAT flag to avoid unnecessary getattr() calls for
  filesystems like ssh2-handler that already provide all the stat data in
  readdir(). 

- Don't treat ENOSYS return value from FbxSetAmigaProtectionFlags() as an
  error.

- Rewrote the FbxFillInfoData() function and made it set id_BytesPerBlock to
  512 instead of zero if a volume is not available.

- Modified path handling for Ext2FileSystem which only accepts "/" as path
  argument for the file system root directory and not "".

- Rewrote FbxReturnMountMsg() using ReplyPkt() and added a NULL msg safety
  check.

- Added some more validity checks when reading FSSM from device node in
  FbxSetupFS().

- Added validity checks in code for getting FSSM in FbxQueryMountMsg().

- Changed CHECKVOLUME() macro to return ERROR_NOT_A_DOS_DISK instead of
  ERROR_OBJECT_IN_USE when the filesystem is inhibited.

- Added semaphore protection in FbxHandleTimerEvent().

- Added the FbxQueryFS() and FbxQueryFSTags() functions.

- Added the FbxGetSysTime() function.


filesysbox.library 54.1 (d.m.2023)

- A rename operation with exactly the same source and destination is now
  treated as a no-op and returns success rather than ERROR_OBJECT_EXISTS.

- Rename operations where the the only change is in letter casing (e.g.
  "rename tmp TMP") no longer fail with ERROR_OBJECT_EXISTS on case
  insensitive file system implementations.
